Alterar cor do botao que adiciona aluno

--- a/app/src/main/res/layout/activity_lista_alunos.xml
+++ b/app/src/main/res/layout/activity_lista_alunos.xml
@@ -22,7 +22,7 @@
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/ic_action_novo_aluno"
-        app:backgroundTint="#F40505"
+        app:backgroundTint="#673AB7"
         app:rippleColor="#FFFFFF"
         app:srcCompat="@android:drawable/ic_input_add" />
 
